# onprem-rag-practice

./: .env.example  .gitignore  Dockerfile.opensearch  Makefile  README.md  docker-compose.gpu.yml  docker-compose.opensearch.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.antigravitycli/: ac2b91ec-8304-444d-9baf-b4b847122a35.json
app/: chunking.py  config.py  hybrid_search.py  ingestion.py  main.py  parse_odl.py  schema.py
app/embeddings/: bge_m3_embedder.py
app/eval/: __init__.py  __main__.py  metrics.py
app/llm/: ax_light.py
app/parsing/: __init__.py  pdf_parser.py
app/rerank/: bge_reranker.py
app/retrievers/: fusion.py  milvus_retriever.py  opensearch_retriever.py
data/: README.md
data/eval/: qrels.jsonl
docs/: RAG검색_설계문서.docx  runbook.md  t4-startup-checklist.md  챗봇_실습_프로젝트_구상도.docx
tests/: test_chunking.py  test_fusion.py  test_hybrid_fallback.py  test_metrics.py  test_team_contract.py
